[metadata]
name = image-viewer-BIOMEDICAL-IMAGING-GROUP
version = 0.0.1
author = Biomedical Imaging Group
author_email = author@example.com
description = Interactive image visualization tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Biomedical-Imaging-Group/IPLabImageViewer
project_urls =
    Bug Tracker = https://github.com/Biomedical-Imaging-Group/IPLabImageViewer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Creative Commons Zero v1.0 Universal License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src